# mlops-fraud-detection

./: .dockerignore  .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.demo  Makefile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  render.yaml  setup.cfg
.github/workflows/: cd.yml  ci.yml  e2e.yml  monitor.yml  quality.yml  retrain.yml  security.yml
api/: .dockerignore  Dockerfile  __init__.py  main.py  schemas.py
docs/: analysis.md  architecture.md  deploy.md  elliptic_analysis.md  model_card.md  results.md  scaling.md  second_dataset_demo.md
metrics/: train_metrics.json
metrics/cc-default/: eval_metrics.json  train_metrics.json
notebooks/: 01_eda.ipynb
scripts/: block_untracked_artifacts.py  demo_entrypoint.sh  e2e_smoke.py  elliptic_temporal_eval.py  generate_comparison.py  generate_dataset_figures.py  generate_figures.py  integration_test.py  make_smoke_data.py  promote_model.py
src/: __init__.py  config.py
src/data/: __init__.py  download.py  preprocess.py  validate.py
src/models/: __init__.py  evaluate.py  predict.py  train.py
src/monitoring/: __init__.py  detect_drift.py
tests/: conftest.py  sample_transaction.json  test_api.py  test_config.py  test_download.py  test_drift.py  test_evaluate.py  test_predict.py  test_preprocess.py  test_promote.py  test_train.py  test_validate.py
