[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection-mlops"
version = "0.1.0"
description = "End-to-end MLOps pipeline for credit-card fraud detection."
requires-python = ">=3.11"
# Base is intentionally empty: install a role-specific extra below. The package
# is always installed editable so config.py resolves PROJECT_ROOT (params.yaml,
# models/, data/) relative to the repo checkout.
dependencies = []

[project.optional-dependencies]
# Training + pipeline (DVC stages, validation, training, drift).
train = [
    "dvc==3.50.*",
    "pathspec>=0.12,<1",          # dvc 3.50 needs pathspec < 1 (_DIR_MARK)
    "dvc-gdrive==3.0.*",
    "pandera==0.20.*",
    "xgboost==2.0.*",
    "shap==0.45.*",
    "mlflow==2.13.*",
    "scikit-learn==1.5.*",       # 1.5 fixes PYSEC-2024-110 (was 1.4.*)
    "pandas==2.2.*",
    "pyarrow==15.*",
    "evidently==0.4.*",
    "kaggle==1.6.*",
    "pyyaml==6.0.*",
    "python-dotenv==1.0.*",
    "matplotlib==3.8.*",
    "setuptools>=68,<81",        # mlflow 2.13 needs pkg_resources (removed in setuptools 81)
]
# Serving only — deliberately minimal so the API image stays small.
api = [
    "fastapi>=0.116,<1",         # >=0.116 pulls a patched starlette (CVE-2024-47874 etc.)
    "uvicorn[standard]==0.29.*",
    "pydantic>=2.6,<3",          # room for the resolver; API only uses stable 2.x features
    "mlflow-skinny==2.13.*",     # client-only: loads models from the registry, no
                                 # server/serving code (drops that CVE surface from
                                 # the serving image; full mlflow stays in `train`)
    "xgboost==2.0.*",
    "scikit-learn==1.5.*",       # unpickle the fitted RobustScaler; 1.5 fixes PYSEC-2024-110
    "pandas==2.2.*",
    "numpy==1.26.*",
    "pyyaml==6.0.*",             # config.py reads params.yaml
    "prometheus-fastapi-instrumentator==6.1.*",
    "setuptools>=68,<81",        # mlflow 2.13 needs pkg_resources (removed in setuptools 81)
]
dev = [
    "fraud-detection-mlops[train,api]",
    "pytest==8.1.*",
    "pytest-asyncio==0.23.*",
    "pytest-cov==5.0.*",
    "httpx==0.27.*",
    "ruff==0.4.*",
    "mypy==1.10.*",
    "pre-commit==3.7.*",
    "types-PyYAML==6.0.*",
]

[tool.setuptools.packages.find]
include = ["src*", "api*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
# Tests may use assert and omit some annotations.
"tests/*" = ["ANN001", "ANN201", "ANN202"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = []
